<resources>
  <!--General Strings-->
  <string name="app_name">Printless</string>
  <string name="empty_state_content_description">Empty State Image</string>
  <string name="empty_state_text_view">Tap (+) to add new item</string>
  <string name="empty_state_add_subject">Add a subject you teach</string>
  <string name="empty_state_add_class">Add classes under your subject</string>
  <string name="empty_state_add_student">Add students to this class</string>
  <string name="button_add_new">ADD</string>
  <string name="button_cancel_new">Cancel</string>
  <string name="button_update_current">UPDATE</string>
  <string name="snack_added_success">New item added successfully</string>
  <string name="snack_edited_success">Item updated successfully</string>
  <string name="snack_deleted_success">Item deleted successfully</string>
  <string name="missing_data_field_warn">This field is required</string>
  <string name="overflow_content_description">Overflow Button for menu</string>
  <string name="img_finished_content">Attendance Saved Successfully</string>
  <string name="menu_home_string">Home</string>
  <string name="menu_reports_string">Reports</string>
  <string name="menu_settings_string">Settings</string>
  <string name="permissions_required">App requires WRITE_EXTERNAL_STORAGE to export excel reports</string>
  <string name="account_content">Account Image</string>
  <string name="frag_setting_activity">Alerts &amp; Backup</string>
  <string name="change_password_str">Change Password</string>
  <string name="log_out">Sign out</string>


  <!--Preset Date-->
  <string name="label_date">Preferred date</string>
  <string name="prefered_date_saturday">Saturday</string>
  <string name="prefered_date_sunday">Sunday</string>
  <string name="prefered_date_monday">Monday</string>
  <string name="prefered_date_tuesday">Tuesday</string>
  <string name="prefered_date_wednesday">Wednesday</string>
  <string name="prefered_date_thursday">Thursday</string>
  <string name="prefered_date_friday">Friday</string>
  <!--Preset Time-->
  <string name="label_time">Preferred Time</string>
  <string name="prefered_time_one">01:00</string>
  <string name="prefered_time_two">02:00</string>
  <string name="prefered_time_three">03:00</string>
  <string name="prefered_time_four">04:00</string>
  <string name="prefered_time_five">05:00</string>
  <string name="prefered_time_six">06:00</string>
  <string name="prefered_time_seven">07:00</string>
  <string name="prefered_time_eight">08:00</string>
  <string name="prefered_time_nine">09:00</string>
  <string name="prefered_time_ten">10:00</string>
  <string name="prefered_time_eleven">11:00</string>
  <string name="prefered_time_twelve">12:00</string>
  <string name="prefered_time_am">AM</string>
  <string name="prefered_time_pm">PM</string>
  <string name="list_view_empty_state">No date scheduled for this class</string>
  <string name="date_action_btn_save">Save New Schedule</string>
  <string name="date_action_btn_schedule">Schedule New Date</string>
  <string name="date_btn_back">back to list of dates button</string>
  <!--Preset General Layout-->
  <string name="btn_preset_okay">Confirm</string>
  <string name="string_label_date">Date</string>
  <string name="string_label_time">Time</string>

  <!--Subject Activity Strings-->
  <string name="subject_name_hint">Subject Name</string>
  <string name="subject_school_hint">School or University Name</string>
  <string name="subject_add_edit_error_msg">Cannot reload data please try again.</string>
  <string name="subject_add_edit_missing_date">Missing fields need to fill.</string>
  <string name="zero_classes">Classes (0)</string>
  <string name="snackbar_action_undo">UNDO</string>
  <!--Subject ToolBar Tabs-->
  <string name="toolbar_subjects">All Subjects</string>
  <string name="toolbar_reports">Reports</string>
  <string name="toolbar_settings">Settings</string>
  <string name="toolbar_new_subject">Add New Subject</string>
  <string name="toolbar_edit_subject">Edit Subject Info</string>

  <!--Classes Activity Strings-->
  <string name="class_name_hint">Class Name or Number</string>
  <string name="cannot_open_attendance">Cannot take attendance for zero students class</string>
  <string name="toolbar_new_class">Add New Class</string>
  <string name="toolbar_edit_class">Edit Class Info</string>

  <!--Student Activity Strings-->
  <string name="student_uid_hint">Student ID No.</string>
  <string name="student_name_hint">Student Name</string>
  <string name="zero_students">Students (0)</string>
  <string name="export_report_string">EXPORT REPORT</string>
  <string name="duplicate_students_msg">This student ID assigned to ( %1$s ).\nDo you want to proceed? </string>
  <string name="duplicate_msg_okay">Okay</string>
  <string name="duplicate_msg_cancel">Cancel</string>
  <!--Student Toolbar Tabs-->
  <string name="toolbar_new_student">Add New Student</string>
  <string name="toolbar_edit_student">Edit Student Info</string>


  <!--Popup menu strings-->
  <string name="pop_menu_rename">Rename</string>
  <string name="pop_menu_delete">Delete</string>
  <string name="pop_menu_preset">Set Schedule Date</string>
  <string name="pop_menu_new_att">Take New Attendance</string>
  <string name="pop_menu_edit_att">Edit Previous Attendance</string>

  <!--Attendance Activity Strings-->
  <string name="attendance_save_btn">Save &amp; Exit</string>

  <!--Reports Fragment-->
  <string name="report_student_count">Student Total (%1$d)</string>
  <string name="report_absentee_count">Absence total (%1$d)</string>
  <string name="report_absentee_total_lect">Lecture total (%1$d)</string>
  <string name="report_absentee_percentage">Absence percentage to lectures opened (%1$d</string>
  <string name="report_empty_state_msg">Still no generated reports data to display</string>

  <!--Settings Activity Strings-->
  <string name="settings_password">Password</string>
  <string name="settings_email">Email</string>
  <string name="settings_absentee">Absence percentage alert</string>
  <string name="settings_logout">Log Out</string>

  <!--Notifications Channel-->
  <string name="notification_channel_name">Students Channel</string>
  <string name="notification_channel_desc">Main App Notifications channel for scheduled subjects</string>
  <string name="notification_title">Scheduled Attendance Notification</string>
  <string name="notify_action_take">Take Attendance</string>

  <!--Register Fragment-->
  <string name="reg_email_hint">Email Address</string>
  <string name="reg_password_hint">Password</string>
  <string name="reg_retype_password_hint">Retype Password</string>
  <string name="reg_button_action">Create</string>
  <string name="str_msg_false">Register failed</string>
  <string name="str_msg_email_exist">Email exist or weak password</string>
  <string name="str_dialog_ok">ok</string>
  <string name="str_login_sucess">Register and Login success</string>

  <!--Login Fragment-->
  <string name="log_button_acion">LOG IN</string>
  <string name="log_forgot_password">I forgot my password</string>
  <string name="str_login_process">Login</string>
  <string name="str_login_failed">Login failed</string>
  <string name="str_login_email_wrong">Email not exist or wrong password!</string>
  <string name="str_login_reset">SEND</string>
  <string name="login_reset_failed_msg">Invalid email address try again</string>
  <string name="login_reset_success_msg">Reset email sent successfully</string>
  <string name="login_failed_msg">Invalid email or wrong password, try again</string>
  <string name="login_failed_operation_msg">Failed to log in, try again</string>
  <string name="login_success_msg">Log in successfully</string>

  <!--Permissions Strings-->
  <string name="dialog_permission_msg">The App will ask you for WRITE_DATA permission to export excel reports</string>
  <string name="dialog_per_ok">OK</string>
  <string name="dialog_per_cancel">Cancel</string>
  <string name="dialog_deny_msg">The app cannot function without permissions</string>

  <!--Settings Screen-->
  <string name="absnteem_key">absnteem</string>
  <string name="absnteem_default">50</string>

  <string name="report_cat_key">reports</string>
  <string name="report_cat_title">Reports</string>

  <string name="settings_sync_time_label">Backup Time</string>
  <string name="settings_sync_time_key" translatable="false">backup_time</string>

  <string name="settings_cat_sync_key">sync_cat</string>
  <string name="settings_cat_sync_label">Cloud Backup</string>

  <string name="settings_sync_time_default">@string/settings_sync_day_key</string>

  <string name="settings_sync_twelve_label">Every 12 hours</string>
  <string name="settings_sync_twelve_key" translatable="false">twelve_time</string>

  <string name="settings_sync_day_label">Every Day</string>
  <string name="settings_sync_day_key" translatable="false">day_time</string>

  <string name="settings_sync_week_label">Every Week</string>
  <string name="settings_sync_week_key" translatable="false">week_time</string>

  <!--Change Password-->
  <string name="current_password">Current Password</string>
  <string name="new_password">New Password</string>
  <string name="confirm_password">Confirm</string>

</resources>
