<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/dimen_five_dp"
  >

  <TextView
    android:id="@+id/tv_settings_password"
    android:drawableStart="@drawable/ic_lock"
    android:drawablePadding="@dimen/dimen_eight_dp"
    android:drawableEnd="@drawable/ic_arrow"
    android:text="@string/settings_password"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    style="@style/settingsTVstyle"
    />

  <TextView
    android:id="@+id/tv_settings_email"
    android:drawableStart="@drawable/ic_email"
    android:drawablePadding="@dimen/dimen_eight_dp"
    android:drawableEnd="@drawable/ic_arrow"
    android:text="@string/settings_email"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_settings_password"
    style="@style/settingsTVstyle"
    />

  <TextView
    android:id="@+id/tv_settings_absentee"
    android:drawableStart="@drawable/ic_alert"
    android:drawablePadding="@dimen/dimen_eight_dp"
    android:drawableEnd="@drawable/ic_arrow"
    android:text="@string/settings_absentee"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_settings_email"
    style="@style/settingsTVstyle"
    />

  <TextView
    android:id="@+id/tv_settings_logout"
    style="@style/settingsTVstyle"
    android:layout_marginBottom="@dimen/dimen_twentyfour_dp"
    android:drawableStart="@drawable/ic_logout"
    android:drawablePadding="@dimen/dimen_eight_dp"
    android:text="@string/settings_logout"
    android:textSize="@dimen/text_body_size"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />

</android.support.constraint.ConstraintLayout>