<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
    <variable
      name="listener"
      type="com.nloops.students.views.PresetDateFragment.ScheduleDateListener"/>
  </data>

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/txt_label_size"
      style="@style/Widget.Label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_eight_dp"
      android:layout_marginStart="@dimen/dimen_twentyfour_dp"
      android:text="@string/label_time"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
      android:id="@+id/txt_time1"
      style="@style/Widget.DateTime"
      android:layout_marginTop="@dimen/dimen_sixteen_dp"
      android:onClick="@{listener::onDateSelected}"
      android:text="@string/prefered_time_ten"
      app:layout_constraintEnd_toStartOf="@+id/txt_time2"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txt_label_size"/>

    <TextView
      android:id="@+id/txt_time2"
      style="@style/Widget.DateTime"
      android:onClick="@{listener::onDateSelected}"
      android:text="@string/prefered_time_one"
      app:layout_constraintBottom_toBottomOf="@+id/txt_time1"
      app:layout_constraintEnd_toStartOf="@+id/txt_time3"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/txt_time1"
      app:layout_constraintTop_toTopOf="@+id/txt_time1"/>

    <TextView
      android:id="@+id/txt_time3"
      style="@style/Widget.DateTime"
      android:onClick="@{listener::onDateSelected}"
      android:text="@string/prefered_time_three"
      app:layout_constraintBottom_toBottomOf="@+id/txt_time2"
      app:layout_constraintEnd_toStartOf="@+id/txt_time4"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/txt_time2"
      app:layout_constraintTop_toTopOf="@+id/txt_time2"/>

    <TextView
      android:id="@+id/txt_time4"
      style="@style/Widget.DateTime"
      android:onClick="@{listener::onDateSelected}"
      android:text="@string/prefered_time_seven"
      app:layout_constraintBottom_toBottomOf="@+id/txt_time3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/txt_time3"
      app:layout_constraintTop_toTopOf="@+id/txt_time3"/>


  </android.support.constraint.ConstraintLayout>

</layout>