<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".login.LoginFragment">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/log_edit_holder"
    style="@style/TextInputStyle"
    android:hint="@string/reg_email_hint"
    app:hintEnabled="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/log_email_ed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text|textWebEmailAddress"
      android:maxLines="1"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/log_password_holder"
    style="@style/TextInputStyle"
    android:layout_marginTop="@dimen/dimen_sixteen_dp"
    android:hint="@string/reg_password_hint"
    app:layout_constraintLeft_toLeftOf="@id/log_edit_holder"
    app:layout_constraintTop_toBottomOf="@id/log_edit_holder"
    app:passwordToggleEnabled="true">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/log_password_ed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:maxLines="1"/>
  </android.support.design.widget.TextInputLayout>

  <TextView
    android:id="@+id/tv_login_forgot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/log_password_holder"
    app:layout_constraintLeft_toLeftOf="@id/log_edit_holder"
    android:text="@string/log_forgot_password"
    android:layout_marginTop="@dimen/dimen_sixteen_dp"
    android:background="?android:attr/selectableItemBackground"
    android:textSize="@dimen/text_body_size"
    />

  <Button
    android:id="@+id/log_btn_action"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_twentyfour_dp"
    android:background="@drawable/add_btn_background"
    android:elevation="@dimen/dimen_six_dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:text="@string/log_button_acion"
    android:textSize="@dimen/text_button_size"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    />

</android.support.constraint.ConstraintLayout>